@@ -56,7 +56,7 @@ class LocStatistics:
 
     def __init__(self, module, onlybranch = None):
         self.module = module
-        CVS = modules.CvsModule(module, 0)
+        CVS = modules.CvsModule(module, 1)
 
         mybranches = CVS.paths.keys()
         if onlybranch and onlybranch in mybranches:
@@ -558,12 +558,20 @@ might be worth investigating.
                     allfigs.append(file)
 
 if __name__ == "__main__":
-    import sys
-    if sys.argv[1]:
-        m = modules.XmlModules(sys.argv[1])
-        #else:
-        #    m = modules.XmlModules("gnome-modules.xml")
-        for modid in m:
-            LocStatistics(m[modid])
-            #cvs = CvsModule(m[modid])
-            #print modid, ":\n", m[modid]
+    import sys, os
+    if len(sys.argv)==2 or len(sys.argv)==4:
+        if sys.argv[1] and os.access(sys.argv[1], os.R_OK):
+            m = modules.XmlModules(sys.argv[1])
+            if len(sys.argv)==4:
+                module = sys.argv[2]
+                branch = sys.argv[3]
+                if module in m.keys():
+                    LocStatistics(m[module])
+            else:
+                for modid in m:
+                    LocStatistics(m[modid])
+        else:
+            print "Usage:\n\t%s MODULES_XML_FILE [MODULE_ID BRANCH]\n" % (sys.argv[0])
+    else:
+        print "Usage:\n\t%s MODULES_XML_FILE [MODULE_ID BRANCH]\n" % (sys.argv[0])
+
